--- a/KoalaBanden/src/GUI/main.fxml
+++ b/KoalaBanden/src/GUI/main.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTreeView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.DropShadow?>
@@ -13,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="763.0" prefWidth="1257.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="763.0" prefWidth="1257.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.mainController">
    <children>
       <HBox alignment="TOP_CENTER" layoutX="-2.0" layoutY="-6.0" prefHeight="168.0" prefWidth="1259.0" style="-fx-background-color: #699F6B;" stylesheets="@style.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -49,7 +51,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="272.0" text="Opret sag">
+            <JFXButton fx:id="opretbtn" alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="272.0" text="Opret sag">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -154,8 +156,12 @@
       </Pane>
       <ScrollPane layoutX="273.0" layoutY="241.0" prefHeight="517.0" prefWidth="980.0" style="-fx-background-color: #fff;">
          <content>
-            <VBox fx:id="news_scroll" prefHeight="404.0" prefWidth="1023.0" spacing="20.0" style="-fx-background-color: #fff;" />
+            <VBox fx:id="news_scroll" prefHeight="404.0" prefWidth="1023.0" spacing="20.0" style="-fx-background-color: #fff;">
+               <children>
+                  <JFXTreeView fx:id="h_sager" />
+               </children></VBox>
          </content>
       </ScrollPane>
+      <Button layoutX="36.0" layoutY="221.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
