--- a/KoalaBanden/src/GUI/main.fxml
+++ b/KoalaBanden/src/GUI/main.fxml
@@ -3,7 +3,6 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTreeView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.DropShadow?>
@@ -51,7 +50,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <JFXButton fx:id="opretbtn" alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="272.0" text="Opret sag">
+            <JFXButton fx:id="opretbtn" alignment="BASELINE_LEFT" onAction="#createCase" prefHeight="57.0" prefWidth="272.0" text="Opret sag">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -63,7 +62,7 @@
                   <Insets left="50.0" />
                </padding>
             </JFXButton>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="267.0" text="Sager">
+            <JFXButton alignment="BASELINE_LEFT" onAction="#seeCases" prefHeight="57.0" prefWidth="267.0" text="Sager">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -162,6 +161,5 @@
                </children></VBox>
          </content>
       </ScrollPane>
-      <Button layoutX="36.0" layoutY="221.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
