--- a/KoalaBanden/src/GUI/caseOpening.fxml
+++ b/KoalaBanden/src/GUI/caseOpening.fxml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
-<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="696.0" prefWidth="949.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="696.0" prefWidth="949.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.CaseOpeningController">
    <children>
-      <Pane layoutX="29.0" layoutY="22.0" prefHeight="556.0" prefWidth="896.0" style="-fx-background-color: #fff;">
+      <Pane layoutX="29.0" layoutY="22.0" prefHeight="92.0" prefWidth="896.0" style="-fx-background-color: #fff;">
          <children>
             <ImageView fitHeight="70.0" fitWidth="76.0" layoutX="41.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/download.png" />
                </image>
             </ImageView>
-            <Separator layoutX="41.0" layoutY="94.0" prefHeight="0.0" prefWidth="763.0" />
             <Label layoutX="123.0" layoutY="18.0" text="Sagsåbning" textFill="#699f6b">
                <font>
                   <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="51.0" layoutY="113.0" text="Changelog:" textFill="#aeacac">
-               <font>
-                  <Font size="14.0" />
                </font>
             </Label>
             <Label layoutX="725.0" layoutY="13.0" text="Dato" textFill="#699f6b">
@@ -49,32 +46,60 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <JFXTextField layoutX="51.0" layoutY="158.0" />
-            <Separator layoutX="519.0" layoutY="138.0" orientation="VERTICAL" prefHeight="358.0" prefWidth="0.0" />
-            <Label layoutX="652.0" layoutY="114.0" text="Tilføj værge" textFill="#4d4c4c">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="51.0" layoutY="139.0" text="Navn" textFill="#4d4c4c">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <JFXTextField layoutX="51.0" layoutY="229.0" />
-            <Label layoutX="51.0" layoutY="210.0" text="CPR" textFill="#4d4c4c">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <JFXTextField layoutX="250.0" layoutY="229.0" prefHeight="31.0" prefWidth="65.0" />
-            <JFXTextField layoutX="51.0" layoutY="297.0" prefHeight="31.0" prefWidth="270.0" />
-            <Label layoutX="51.0" layoutY="278.0" text="Email" textFill="#4d4c4c">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <JFXComboBox fx:id="guardiancombo" layoutX="561.0" layoutY="174.0" prefHeight="31.0" prefWidth="250.0" />
+            <TabPane layoutX="3.0" layoutY="96.0" prefHeight="458.0" prefWidth="889.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Generelle Oplysninger">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <CheckBox layoutX="14.0" layoutY="25.0" mnemonicParsing="false" text="CheckBox" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab text="Henvendelse">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hvor kommer henvendelsen fra?">
+                                 <font>
+                                    <Font name="Apple SD GothicNeo ExtraBold" size="13.0" />
+                                 </font>
+                              </Text>
+                              <VBox layoutX="14.0" layoutY="31.0" prefHeight="274.0" prefWidth="278.0" spacing="8.0">
+                                 <children>
+                                    <CheckBox fx:id="Borger" mnemonicParsing="false" text="Borger" />
+                                    <CheckBox fx:id="Pårørende" mnemonicParsing="false" text="Pårørende" />
+                                    <CheckBox fx:id="Læge" mnemonicParsing="false" text="Læge" />
+                                    <CheckBox fx:id="Hospital" mnemonicParsing="false" text="Hospital" />
+                                    <CheckBox fx:id="andenForvaltning" mnemonicParsing="false" text="Anden forvaltning" />
+                                    <CheckBox fx:id="igangværendeIndsats" mnemonicParsing="false" text="Igangværende indsats" />
+                                    <CheckBox fx:id="andenKommune" mnemonicParsing="false" text="Anden kommune" />
+                                    <CheckBox fx:id="andre" mnemonicParsing="false" text="Andre" />
+                                    <TextField disable="true" editable="false" prefHeight="27.0" prefWidth="143.0" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                  <Tab text="Værgemål og Repræsentation">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+                  <Tab text="Rettigheder/Pligter og Samtykke">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+                  <Tab text="Aftale om videre forløb">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+              </tabs>
+            </TabPane>
          </children>
          <effect>
             <DropShadow color="#d7d2d2" height="50.0" radius="24.5" width="50.0" />
