--- a/KoalaBanden/src/GUI/caseOpening.fxml
+++ b/KoalaBanden/src/GUI/caseOpening.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="696.0" prefWidth="949.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.CaseOpeningController">
+<AnchorPane id="AnchorPane" prefHeight="696.0" prefWidth="949.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.caseOpeningController">
    <children>
       <Pane layoutX="29.0" layoutY="22.0" prefHeight="92.0" prefWidth="896.0" style="-fx-background-color: #fff;">
          <children>
