--- a/KoalaBanden/src/GUI/userlist.fxml
+++ b/KoalaBanden/src/GUI/userlist.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="1117.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="1117.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.UserlistController">
    <children>
       <ImageView fitHeight="70.0" fitWidth="76.0" layoutX="51.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
