--- a/KoalaBanden/src/GUI/main.fxml
+++ b/KoalaBanden/src/GUI/main.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -157,6 +158,7 @@
             <VBox fx:id="news_scroll" prefHeight="404.0" prefWidth="1023.0" spacing="20.0" style="-fx-background-color: #fff;">
                <children>
                   <Label fx:id="sager" />
+                  <ListView fx:id="sagerListe" prefHeight="200.0" prefWidth="200.0" />
                </children></VBox>
          </content>
       </ScrollPane>
