createuser fxml - email tilføjet

--- a/KoalaBanden/src/GUI/createuser.fxml
+++ b/KoalaBanden/src/GUI/createuser.fxml
@@ -28,11 +28,13 @@
          </font>
       </Label>
       <Separator layoutX="38.0" layoutY="114.0" prefHeight="2.0" prefWidth="525.0" />
-      <Label layoutX="37.0" layoutY="194.0" text="Brugernavn:" />
-      <Label layoutX="37.0" layoutY="254.0" text="Adgangskode:" />
+      <Label layoutX="34.0" layoutY="150.0" text="Brugernavn:" />
+      <Label layoutX="27.0" layoutY="208.0" text="Adgangskode:" />
+      <Label layoutX="77.0" layoutY="252.0" text="Email:" />
+      <JFXTextField fx:id="passwordTextField1" layoutX="144.0" layoutY="247.0" prefHeight="31.0" prefWidth="279.0" />
       <JFXComboBox fx:id="accessLevelComboBox" layoutX="148.0" layoutY="355.0" prefHeight="31.0" prefWidth="188.0" promptText="Vælg niveau" unFocusColor="WHITE" />
-      <JFXTextField fx:id="usernameTextField" layoutX="145.0" layoutY="171.0" prefHeight="31.0" prefWidth="279.0" />
-      <JFXTextField fx:id="passwordTextField" layoutX="144.0" layoutY="239.0" prefHeight="31.0" prefWidth="279.0" />
+      <JFXTextField fx:id="usernameTextField" layoutX="144.0" layoutY="145.0" prefHeight="31.0" prefWidth="279.0" />
+      <JFXTextField fx:id="passwordTextField" layoutX="144.0" layoutY="203.0" prefHeight="31.0" prefWidth="279.0" />
       <Label layoutX="37.0" layoutY="362.0" text="Adgangsniveau:" />
       <Label layoutX="37.0" layoutY="313.0" text="CPR:" />
       <JFXTextField fx:id="CPRTextField1" layoutX="74.0" layoutY="308.0" prefHeight="31.0" prefWidth="139.0" />
