--- a/KoalaBanden/src/GUI/userlist.fxml
+++ b/KoalaBanden/src/GUI/userlist.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -41,7 +41,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <JFXTreeTableView layoutX="55.0" layoutY="164.0" prefHeight="444.0" prefWidth="1020.0" />
       <Pane layoutX="55.0" layoutY="616.0" prefHeight="70.0" prefWidth="1020.0" style="-fx-background-color: #F0F0F0;">
          <children>
             <JFXButton fx:id="returnButton" layoutX="26.0" layoutY="20.0" onAction="#handleReturnButtonAction" style="-fx-background-color: #FC432E;" text="Tilbage" textFill="WHITE" />
@@ -79,7 +78,7 @@
                   <Insets right="15.0" />
                </HBox.margin>
             </JFXButton>
-            <JFXButton prefHeight="58.0" prefWidth="134.0" style="-fx-background-color: #699F6B;" text="Rediger Bruger" textFill="WHITE">
+            <JFXButton fx:id="editUserButton" onAction="#handleEditUserButtonAction" prefHeight="58.0" prefWidth="134.0" style="-fx-background-color: #699F6B;" text="Rediger Bruger" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="19.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -93,5 +92,6 @@
             </JFXButton>
          </children>
       </HBox>
+      <JFXListView fx:id="userListView" layoutX="55.0" layoutY="164.0" prefHeight="444.0" prefWidth="1020.0" />
    </children>
 </AnchorPane>
