--- a/KoalaBanden/src/GUI/main.fxml
+++ b/KoalaBanden/src/GUI/main.fxml
@@ -27,7 +27,7 @@
       </HBox>
       <VBox layoutX="-3.0" layoutY="251.0" prefHeight="517.0" prefWidth="267.0">
          <children>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="270.0" text="Forside">
+            <JFXButton fx:id="frontPageButton" alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="270.0" text="Forside">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
@@ -62,7 +62,7 @@
                   <Insets left="50.0" />
                </padding>
             </JFXButton>
-            <JFXButton alignment="BASELINE_LEFT" onAction="#seeCases" prefHeight="57.0" prefWidth="267.0" text="Sager">
+            <JFXButton fx:id="casesButton" alignment="BASELINE_LEFT" onAction="#seeCases" prefHeight="57.0" prefWidth="267.0" text="Sager">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -74,7 +74,7 @@
                   <Insets left="50.0" />
                </padding>
             </JFXButton>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="268.0" text="Henvendelser">
+            <JFXButton fx:id="enquiryButton" alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="268.0" text="Henvendelser">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -109,7 +109,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <JFXButton alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="270.0" text="Administrator">
+            <JFXButton fx:id="administratorButton" alignment="BASELINE_LEFT" prefHeight="57.0" prefWidth="270.0" text="Administrator">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
