--- a/KoalaBanden/src/GUI/Enquiry.fxml
+++ b/KoalaBanden/src/GUI/Enquiry.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="701.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HenvendelseController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="701.0" prefWidth="810.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.EnquiryController">
    <children>
       <ImageView fitHeight="70.0" fitWidth="76.0" layoutX="61.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -29,14 +29,14 @@
          </font>
       </Label>
       <Separator layoutX="38.0" layoutY="113.0" prefHeight="6.0" prefWidth="740.0" />
-      <TextField fx:id="CPRTextField1" layoutX="475.0" layoutY="169.0" prefHeight="31.0" prefWidth="139.0" />
+      <TextField fx:id="CPRTextField1" layoutX="472.0" layoutY="169.0" prefHeight="31.0" prefWidth="142.0" />
       <TextField fx:id="CPRTextField2" layoutX="649.0" layoutY="169.0" prefHeight="31.0" prefWidth="80.0" />
       <TextField fx:id="nameField" layoutX="470.0" layoutY="209.0" prefHeight="31.0" prefWidth="279.0" />
       <TextField fx:id="lastNameField" layoutX="470.0" layoutY="247.0" prefHeight="31.0" prefWidth="279.0" />
       <TextField fx:id="addressField" layoutX="470.0" layoutY="288.0" prefHeight="31.0" prefWidth="279.0" />
-      <TextField fx:id="phoneNumberField" layoutX="470.0" layoutY="331.0" prefHeight="31.0" prefWidth="279.0" />
+      <TextField fx:id="phoneNumberField" layoutX="470.0" layoutY="330.0" prefHeight="31.0" prefWidth="279.0" />
       <Label layoutX="627.0" layoutY="176.0" prefHeight="17.0" prefWidth="9.0" text="-" />
-      <JFXButton fx:id="createButton" alignment="CENTER" layoutX="689.0" layoutY="648.0" onAction="#createEnquiry" style="-fx-background-color: #699F6B;" text="Opret" textFill="WHITE" />
+      <JFXButton fx:id="createButton" alignment="CENTER" layoutX="423.0" layoutY="650.0" onAction="#createEnquiry" style="-fx-background-color: #699F6B;" text="Opret" textFill="WHITE" />
       <VBox alignment="CENTER_RIGHT" layoutX="359.0" layoutY="157.0" prefHeight="263.0" prefWidth="100.0" spacing="20.0">
          <children>
             <Label text="CPR:" />
@@ -60,6 +60,6 @@
       <Separator layoutX="365.0" layoutY="161.0" orientation="VERTICAL" prefHeight="200.0" />
       <TextField fx:id="dateField" layoutX="61.0" layoutY="216.0" prefHeight="31.0" prefWidth="279.0" />
       <TextField fx:id="emailField" layoutX="470.0" layoutY="366.0" prefHeight="31.0" prefWidth="279.0" />
-      <Label layoutY="35.0" text="Telefon" />
+      <JFXButton fx:id="returnButton" alignment="CENTER" layoutX="350.0" layoutY="650.0" onAction="#HandleReturnButtonAction" style="-fx-background-color: #FC432E;" text="Tilbage" textFill="WHITE" />
    </children>
 </AnchorPane>
