--- a/KoalaBanden/src/GUI/caseOpening.fxml
+++ b/KoalaBanden/src/GUI/caseOpening.fxml
@@ -729,7 +729,8 @@
       </Pane>
       <Pane layoutX="14.0" layoutY="684.0" prefHeight="70.0" prefWidth="1014.0" style="-fx-background-color: #F0F0F0;">
          <children>
-            <JFXButton layoutX="480.0" layoutY="22.0" style="-fx-background-color: #699F6B;" text="Opret" textFill="WHITE" />
+            <JFXButton layoutX="517.0" layoutY="23.0" style="-fx-background-color: #699F6B;" text="Opret" textFill="WHITE" />
+            <JFXButton fx:id="returnButton" layoutX="443.0" layoutY="23.0" onAction="#handleReturnButtonAction" style="-fx-background-color: #FC432E;" text="Tilbage" textFill="WHITE" />
          </children>
       </Pane>
    </children>
