--- a/KoalaBanden/src/GUI/createCase.fxml
+++ b/KoalaBanden/src/GUI/createCase.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="337.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.OpretSagController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="337.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.createCaseController">
    <children>
       <ImageView fitHeight="70.0" fitWidth="76.0" layoutX="61.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/download.png" />
          </image>
       </ImageView>
-      <Label layoutX="143.0" layoutY="38.0" text="Henvendelse" textFill="#699f6b">
+      <Label layoutX="143.0" layoutY="38.0" text="Sag" textFill="#699f6b">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -28,12 +28,13 @@
          </font>
       </Label>
       <Separator layoutX="38.0" layoutY="116.0" prefHeight="3.0" prefWidth="572.0" />
-      <TextField fx:id="usernameTextField1" layoutX="339.0" layoutY="223.0" prefHeight="31.0" prefWidth="279.0" />
-      <JFXComboBox fx:id="accessLevelComboBox" layoutX="188.0" layoutY="142.0" prefHeight="31.0" prefWidth="430.0" promptText="Vælg" unFocusColor="WHITE" />
-      <JFXButton fx:id="naestebtn" alignment="CENTER" layoutX="555.0" layoutY="292.0" style="-fx-background-color: #699F6B;" text="Næste" textFill="WHITE" />
+      <TextField fx:id="responsibleCaseworkerField" disable="true" editable="false" layoutX="339.0" layoutY="223.0" prefHeight="31.0" prefWidth="279.0" />
+      <JFXComboBox fx:id="enquiryIDList" layoutX="188.0" layoutY="142.0" prefHeight="31.0" prefWidth="430.0" promptText="Vælg" unFocusColor="WHITE" />
+      <JFXButton fx:id="naestebtn" alignment="CENTER" layoutX="555.0" layoutY="292.0" onAction="#createCaseButtonAction" style="-fx-background-color: #699F6B;" text="Næste" textFill="WHITE" />
       <Label layoutX="38.0" layoutY="147.0" text="Henvendelse ID:" />
       <Label layoutX="38.0" layoutY="228.0" text="Ansvarlig sagsbehandler:" />
       <Label layoutX="38.0" layoutY="191.0" text="Dato:" />
-      <TextField fx:id="usernameTextField11" layoutX="339.0" layoutY="186.0" prefHeight="31.0" prefWidth="279.0" />
+      <TextField fx:id="dateField" disable="true" editable="false" layoutX="339.0" layoutY="186.0" prefHeight="31.0" prefWidth="279.0" />
+      <Label fx:id="sagsStatusText" layoutX="193.0" layoutY="72.0" />
    </children>
 </AnchorPane>
